Tweak to CSS which was bugging me
After clicking the View/Change buttons, the focus around
the buttons would be clipped on the right-hand side. Add a
small margin so the full focus border can display correctly.

--- a/service-front/public/assets/v2/css/application.css
+++ b/service-front/public/assets/v2/css/application.css
@@ -3016,7 +3016,8 @@ input[type=number] {
     text-decoration: none;
     -webkit-font-smoothing: antialiased;
     cursor: pointer;
-    color: #0b0c0c; }
+    color: #0b0c0c;
+    margin-right: 3px; }
     .person-actions .action-edit:visited {
       background-color: #dee0e2; }
     .person-actions .action-edit:hover, .person-actions .action-edit:focus {
